--- a/DigimonWorldNet6/Evolution.Calculator.Tests/Evolution.Calculator.Tests.csproj
+++ b/DigimonWorldNet6/Evolution.Calculator.Tests/Evolution.Calculator.Tests.csproj
@@ -11,9 +11,11 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
       <PackageReference Include="Moq" Version="4.18.3" />
       <PackageReference Include="NUnit" Version="3.13.3" />
       <PackageReference Include="NUnit3TestAdapter" Version="4.3.1" />
+      <PackageReference Include="Shouldly" Version="4.2.1" />
     </ItemGroup>
 
 </Project>
