Setting up DI, improved solution name and improved folder structure.

--- a/DigimonWorldNet6/Evolution.Calculator.Core/Evolution.Calculator.Core.csproj
+++ b/DigimonWorldNet6/Evolution.Calculator.Core/Evolution.Calculator.Core.csproj
@@ -1,15 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0-windows</TargetFramework>
+        <TargetFramework>net8.0-windows</TargetFramework>
         <Nullable>enable</Nullable>
         <UseWPF>true</UseWPF>
         <RootNamespace>DigimonWorld.Evolution.Calculator.Core</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Evolution.Calculator.API\Evolution.Calculator.API.csproj" />
         <ProjectReference Include="..\Generics\Generics.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="EvolutionCriteria\Ultimate\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     </ItemGroup>
 
 </Project>
