--- a/DigimonWorldNet6/Frontend.WPF/Frontend.WPF.csproj
+++ b/DigimonWorldNet6/Frontend.WPF/Frontend.WPF.csproj
@@ -2,14 +2,19 @@
 
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
-        <TargetFramework>net6.0-windows</TargetFramework>
+        <TargetFramework>net8.0-windows</TargetFramework>
         <Nullable>enable</Nullable>
         <UseWPF>true</UseWPF>
         <RootNamespace>DigimonWorld.Frontend.WPF</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Evolution.Calculator.API\Evolution.Calculator.API.csproj"/>
+        <ProjectReference Include="..\Evolution.Calculator.Core\Evolution.Calculator.Core.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     </ItemGroup>
 
 </Project>
