Implement images for source digimon and evolution result.

--- a/DigimonWorldNet6/Frontend.WPF/Frontend.WPF.csproj
+++ b/DigimonWorldNet6/Frontend.WPF/Frontend.WPF.csproj
@@ -17,4 +17,8 @@
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Resource Include="Images\*" />
+    </ItemGroup>
+
 </Project>
