Lots of UI changes to make it look more like DW1

--- a/DigimonWorldNet6/Frontend.WPF/Frontend.WPF.csproj
+++ b/DigimonWorldNet6/Frontend.WPF/Frontend.WPF.csproj
@@ -19,6 +19,8 @@
 
     <ItemGroup>
       <Resource Include="Images\**\*" />
+      <None Remove="Fonts\DW1_US_Regular.ttf" />
+      <Resource Include="Fonts\DW1_US_Regular.ttf" />
     </ItemGroup>
 
 </Project>
