Add evolution emotion animated image to the calculate button. Improve styling configuration.

--- a/DigimonWorldNet6/Frontend.WPF/Frontend.WPF.csproj
+++ b/DigimonWorldNet6/Frontend.WPF/Frontend.WPF.csproj
@@ -23,4 +23,8 @@
       <Resource Include="Fonts\DW1_US_Regular.ttf" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Images\Emotions\Evolution\" />
+    </ItemGroup>
+
 </Project>
