Moved the evolution tool window to a user control. This reduces the complexity of the main window and will most likely make it easier to create a one-page app.

--- a/DigimonWorldNet6/Frontend.WPF/Frontend.WPF.csproj
+++ b/DigimonWorldNet6/Frontend.WPF/Frontend.WPF.csproj
@@ -25,6 +25,7 @@
 
     <ItemGroup>
       <Folder Include="Images\Emotions\Evolution\" />
+      <Folder Include="UserControls\**\*" />
     </ItemGroup>
 
 </Project>
