--- a/DigimonWorldNet6/Frontend.WPF/Frontend.WPF.csproj
+++ b/DigimonWorldNet6/Frontend.WPF/Frontend.WPF.csproj
@@ -9,23 +9,42 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Evolution.Calculator.Core\Evolution.Calculator.Core.csproj" />
+        <ProjectReference Include="..\Evolution.Calculator.Core\Evolution.Calculator.Core.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
-      <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
-      <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
+        <PackageReference Include="CSCore" Version="1.2.1.2"/>
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0"/>
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0"/>
+        <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135"/>
+        <PackageReference Include="System.Reactive" Version="6.0.1"/>
     </ItemGroup>
 
     <ItemGroup>
-      <Resource Include="Images\**\*" />
-      <Resource Include="Fonts\DW1_US_Regular.ttf" />
+        <Resource Include="Images\**\*"/>
+        <Resource Include="Fonts\DW1_US_Regular.ttf"/>
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Images\Emotions\Evolution\" />
-      <Folder Include="UserControls\**\*" />
+        <Folder Include="Images\Emotions\Evolution\"/>
+        <Folder Include="UserControls\**\*"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Include="Music\**\*.mp3">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Include="Music\**\*.wav">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Page Update="UserControls\Styles\Buttons\StretchContentButtonStyleDictionary.xaml">
+        <Generator>MSBuild:Compile</Generator>
+        <XamlRuntime>Wpf</XamlRuntime>
+        <SubType>Designer</SubType>
+      </Page>
     </ItemGroup>
 
 </Project>
