--- a/DigimonWorldNet6/Evolution.Calculator.Core/Evolution.Calculator.Core.csproj
+++ b/DigimonWorldNet6/Evolution.Calculator.Core/Evolution.Calculator.Core.csproj
@@ -7,6 +7,10 @@
         <RootNamespace>DigimonWorld.Evolution.Calculator.Core</RootNamespace>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+        <DebugType>none</DebugType>
+    </PropertyGroup>
+
     <ItemGroup>
         <ProjectReference Include="..\Generics\Generics.csproj" />
     </ItemGroup>
