--- a/DigimonWorldNet6/Frontend.WPF/Frontend.WPF.csproj
+++ b/DigimonWorldNet6/Frontend.WPF/Frontend.WPF.csproj
@@ -19,8 +19,8 @@
 
     <ItemGroup>
         <PackageReference Include="CSCore" Version="1.2.1.2"/>
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.1" />
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.1" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.1"/>
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.1"/>
         <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135"/>
         <PackageReference Include="System.Reactive" Version="6.0.1"/>
     </ItemGroup>
@@ -28,6 +28,9 @@
     <ItemGroup>
         <Resource Include="Images\**\*"/>
         <Resource Include="Fonts\DW1_US_Regular.ttf"/>
+        <Resource Include="Windows\Main\UserControls\DigiWiki\UserControls\FoodTopic\Media\hunger-condition-overworld.jpg"/>
+        <Resource Include="Windows\Main\UserControls\DigiWiki\UserControls\FoodTopic\Media\hunger-condition-screen.jpg"/>
+        <Resource Include="Windows\Main\UserControls\DigiWiki\UserControls\FoodTopic\Media\sleep-condition-overworld.jpg"/>
     </ItemGroup>
 
     <ItemGroup>
