--- a/DigimonWorldNet6/Frontend.WPF/Frontend.WPF.csproj
+++ b/DigimonWorldNet6/Frontend.WPF/Frontend.WPF.csproj
@@ -40,4 +40,12 @@
         </None>
     </ItemGroup>
 
+    <ItemGroup>
+      <Page Update="Windows\Main\UserControls\DigiWiki\UserControls\WeightTopic\Styles\HiddenButtonStyle.xaml">
+        <Generator>MSBuild:Compile</Generator>
+        <XamlRuntime>Wpf</XamlRuntime>
+        <SubType>Designer</SubType>
+      </Page>
+    </ItemGroup>
+
 </Project>
