--- a/DigimonWorldNet6/Evolution.Calculator.Core/Evolution.Calculator.Core.csproj
+++ b/DigimonWorldNet6/Evolution.Calculator.Core/Evolution.Calculator.Core.csproj
@@ -13,7 +13,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Generics\Generics.csproj" />
+        <ProjectReference Include="..\Shared\Shared.csproj" />
     </ItemGroup>
 
     <ItemGroup>
