--- a/DigimonWorldNet6/Shared/Shared.csproj
+++ b/DigimonWorldNet6/Shared/Shared.csproj
@@ -15,6 +15,7 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.1" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.1" />
+      <PackageReference Include="System.Reactive" Version="6.0.1" />
     </ItemGroup>
 
 </Project>
