Feature added: Read memory values
Added the ability to read memory values from duckstation. It allows the user to set the digimon and stats used in the evolution calculator.
Also some boy scouts were done in this commit. I got lazy and put it all in this single commit.

--- a/DigimonWorldNet6/Frontend.WPF/Frontend.WPF.csproj
+++ b/DigimonWorldNet6/Frontend.WPF/Frontend.WPF.csproj
@@ -40,4 +40,22 @@
         </None>
     </ItemGroup>
 
+    <ItemGroup>
+      <Page Update="Windows\Main\UserControls\EmulatorLink\UserControls\SyncProfileSectionUserControl.xaml">
+        <Generator>MSBuild:Compile</Generator>
+        <XamlRuntime>Wpf</XamlRuntime>
+        <SubType>Designer</SubType>
+      </Page>
+      <Page Update="Windows\Main\UserControls\EmulatorLink\UserControls\SyncConditionSectionUserControl.xaml">
+        <Generator>MSBuild:Compile</Generator>
+        <XamlRuntime>Wpf</XamlRuntime>
+        <SubType>Designer</SubType>
+      </Page>
+      <Page Update="Windows\GeneralConfig\Dialogs\EmulatorProcessPickerDialog.xaml">
+        <Generator>MSBuild:Compile</Generator>
+        <XamlRuntime>Wpf</XamlRuntime>
+        <SubType>Designer</SubType>
+      </Page>
+    </ItemGroup>
+
 </Project>
