--- a/DigimonWorldNet6/Evolution.Calculator.Core/Evolution.Calculator.Core.csproj
+++ b/DigimonWorldNet6/Evolution.Calculator.Core/Evolution.Calculator.Core.csproj
@@ -13,6 +13,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\MemoryAccess\MemoryAccess.csproj" />
         <ProjectReference Include="..\Shared\Shared.csproj" />
     </ItemGroup>
 
