--- a/DigimonWorldNet6/MemoryAccess/MemoryAccess.csproj
+++ b/DigimonWorldNet6/MemoryAccess/MemoryAccess.csproj
@@ -6,11 +6,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
-    <ItemGroup>
-      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
-      <PackageReference Include="NUnit" Version="4.4.0" />
-      <PackageReference Include="NUnit3TestAdapter" Version="6.1.0" />
-    </ItemGroup>
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+        <DebugType>none</DebugType>
+    </PropertyGroup>
 
     <ItemGroup>
       <None Update="DW1_NTSC.CT">
